--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,17 @@
     <modules>
         <module>backend-service1</module>
         <module>data-service11</module>
+        <module>lb-library-service</module>
     </modules>
     <properties>
-        <java.version>11</java.version>
+   <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <!-- Loombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- Common -->
@@ -51,13 +51,11 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version>
         </dependency>
         <!--javax-->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
         </dependency>
 
         <!--Spring Security-->
