--- a/backend-service1/config/application.properties
+++ b/backend-service1/config/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test3?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=AnhNga2510
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+
 
 spring.jpa.hibernate.ddl-auto= update
 #   spring.jpa.hibernate.ddl-auto= create
