--- a/backend-service1/config/application.properties
+++ b/backend-service1/config/application.properties
@@ -7,9 +7,9 @@ spring.jpa.generate-ddl=true
 
 
 spring.jpa.hibernate.ddl-auto= update
-#   spring.jpa.hibernate.ddl-auto= create
+#   spring.jpa.hib  ernate.ddl-auto= create
 server.port=8412
 
 ## logging
-#logging.config=${user.dir}/config/logback.xml
+logging.config=${user.dir}/config/logback.xml
 
